--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
 body {
-  background: pink;
+  background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
+}
+
+.console {
+  position: fixed;
+  display: block;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  color: #19f1fc;
+  cursor: default;
+  font-size: 16px;
+  font-family: 'Courier New', Courier, monospace;
+  text-shadow: 0px 0px 2px #19f1fc;
+  overflow: auto;
+  padding: 10px;
+}
+
+.sun {
+  height: 500px;
+  width: 500px;
+  border-radius: 50%;
+  background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
+  margin: 5% auto;
 }
