--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   left: 0;
   background: rgba(0,0,0,0.8);
   color: #19f1fc;
-  cursor: default;
+  cursor: text;
   font-size: 16px;
   font-family: 'Courier New', Courier, monospace;
   text-shadow: 0px 0px 2px #19f1fc;
