--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   text-shadow: 0px 0px 2px #19f1fc;
   overflow: auto;
   padding: 10px;
+  white-space: pre-wrap;
 }
 
 .sun {
@@ -25,4 +26,22 @@ body {
   border-radius: 50%;
   background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
   margin: 5% auto;
+}
+
+#blink {
+  animation: blinking 1s infinite;
+}
+@keyframes blinking{
+  0% {
+    color: #19f1fc;
+    text-shadow: 0px 0px 2px #19f1fc;
+  }
+  50% {
+    color: transparent;
+    text-shadow: none;
+  }
+  100% {
+    color: #19f1fc;
+    text-shadow: 0px 0px 2px #19f1fc;
+  }
 }
