--- a/style.css
+++ b/style.css
@@ -2,14 +2,66 @@ body {
   background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
 }
 
-.console {
+.start {
+  font-family: 'Courier New', Courier, monospace;
+  background: rgba(0,0,0,0.6);
   position: fixed;
-  display: block;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0,0,0,0.8);
+  font-size: 50px;
+  padding-top: 10%;
+  text-shadow: 0px 0px 2px #19f1fc;
+  color: #19f1fc;
+  overflow: auto;
+  text-align: center;
+  font-weight: bold;
+  cursor: default;
+}
+.start div {
+  display: flex;
+}
+#yes, #no {
+  width: 100%;
+  outline: none;
+  font-size: 70px;
+  cursor: pointer;
+}
+#yes:hover::before {
+  content: ">";
+  font-size: 70px;
+}
+#no:hover::before {
+  content: ">";
+  font-size: 70px;
+}
+
+.video {
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding-top: 5%;
+  overflow: auto;
+  background: rgba(0,0,0,0.6);
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  text-shadow: 0px 0px 2px #19f1fc;
+  color: #19f1fc;
+}
+
+.console {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: rgba(0,0,0,0.6);
   color: #19f1fc;
   cursor: text;
   font-size: 16px;
@@ -18,14 +70,6 @@ body {
   overflow: auto;
   padding: 10px;
   white-space: pre-wrap;
-}
-
-.sun {
-  height: 500px;
-  width: 500px;
-  border-radius: 50%;
-  background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
-  margin: 5% auto;
 }
 
 #blink {
