--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
-  background: center/cover linear-gradient(180deg, #f520f5, #19f1fc) fixed;
+  background: center/cover linear-gradient(180deg, #b316b3, #11aeb6) fixed;
 }
 
 .start {
   font-family: 'Courier New', Courier, monospace;
-  background: rgba(0,0,0,0.6);
   position: fixed;
   top: 0;
   bottom: 0;
@@ -28,14 +27,6 @@ body {
   font-size: 70px;
   cursor: pointer;
 }
-#yes:hover::before {
-  content: ">";
-  font-size: 70px;
-}
-#no:hover::before {
-  content: ">";
-  font-size: 70px;
-}
 
 .video {
   display: none;
@@ -47,11 +38,11 @@ body {
   left: 0;
   padding-top: 5%;
   overflow: auto;
-  background: rgba(0,0,0,0.6);
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
   text-shadow: 0px 0px 2px #19f1fc;
   color: #19f1fc;
+  cursor: default;
 }
 
 .console {
@@ -61,7 +52,6 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(0,0,0,0.6);
   color: #19f1fc;
   cursor: text;
   font-size: 16px;
