--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: center/cover linear-gradient(180deg, #b316b3, #11aeb6) fixed;
+  background: #3b3b3b;
 }
 
 .start {
@@ -11,8 +11,8 @@ body {
   left: 0;
   font-size: 50px;
   padding-top: 10%;
-  text-shadow: 0px 0px 2px #19f1fc;
-  color: #19f1fc;
+  text-shadow: 0px 0px 2px #caca00;
+  color: #caca00;
   overflow: auto;
   text-align: center;
   font-weight: bold;
@@ -40,8 +40,8 @@ body {
   overflow: auto;
   text-align: center;
   font-family: 'Courier New', Courier, monospace;
-  text-shadow: 0px 0px 2px #19f1fc;
-  color: #19f1fc;
+  text-shadow: 0px 0px 2px #caca00;
+  color: #caca00;
   cursor: default;
 }
 
@@ -52,14 +52,24 @@ body {
   bottom: 0;
   right: 0;
   left: 0;
-  color: #19f1fc;
+  color: #caca00;
   cursor: text;
   font-size: 16px;
   font-family: 'Courier New', Courier, monospace;
-  text-shadow: 0px 0px 2px #19f1fc;
+  text-shadow: 0px 0px 2px #caca00;
   overflow: auto;
   padding: 10px;
   white-space: pre-wrap;
+  border: 5px ridge #caca00;
+}
+#tab {
+  color: #3b3b3b;
+  background: #caca00;
+  position: fixed;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  padding: 2px 0 2px 5px;
 }
 
 #blink {
@@ -67,15 +77,15 @@ body {
 }
 @keyframes blinking{
   0% {
-    color: #19f1fc;
-    text-shadow: 0px 0px 2px #19f1fc;
+    color: #caca00;
+    text-shadow: 0px 0px 2px #caca00;
   }
   50% {
     color: transparent;
     text-shadow: none;
   }
   100% {
-    color: #19f1fc;
-    text-shadow: 0px 0px 2px #19f1fc;
+    color: #caca00;
+    text-shadow: 0px 0px 2px #caca00;
   }
 }
